# programmiersprachen-aufgabe-1

./: Aufgabe_1-16.txt  Aufgabe_1-4.txt  Aufgabe_1-5.txt  Aufgabe_1-6.txt  Aufgabe_1-7.txt  CMakeLists.txt  README.md
source/: 1-11_fract.cpp  1-12_cylinder.cpp  1-13_factorial.cpp  1-14_is_prime.cpp  1_3-DivisionChecker.cpp  CMakeLists.txt  DivisionChecker.cpp  catch.hpp  checksum.cpp  cylinder.cpp  fract.cpp  mile_to_kilometer.cpp  sum_multiples.cpp  tests.cpp
